# opam-nix-pins

./: README.md  dune-project  flake.nix  opam_nix_pins.opam  opam_nix_pins.opam.template
